--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "geopy>=2.4",
     "click>=8.1",
     "uvicorn>=0.27",
+    "python-jose[cryptography]>=3.3",
 ]
 
 [project.optional-dependencies]
